--- a/frontend/src/layout/DashboardLayout/styles.module.css
+++ b/frontend/src/layout/DashboardLayout/styles.module.css
@@ -94,7 +94,8 @@
 
 /* Profiles */
 .extraContainer_profile {
-  padding: 12px 14px;
+  display: flex;
+  padding: 1px 14px;
   border-radius: 14px;
   margin-bottom: 12px;
   background: #fafafa;
@@ -152,4 +153,20 @@
     padding: 15px;
     margin-bottom: 90px; /* space for bottom nav */
   }
+}
+.extraContainer_profile img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 0.8rem;
+  border: 2px solid #f3f4f6;
+  margin-top: 0.5rem ;
+}
+.extraContainer_profile p {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #111827;
+  margin-top: 1.5rem;
+  margin-left: 1.2rem;
 }
