--- a/frontend/src/pages/my_connections/styles.module.css
+++ b/frontend/src/pages/my_connections/styles.module.css
@@ -10,7 +10,6 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   cursor: pointer;
-  justify-content: ;
 }
 
 .userCard:hover {
@@ -61,3 +60,20 @@
   display: flex;
   flex-direction: column;
 } */
+
+.connectedButton{
+  
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  background-color: white;
+  color: #0A66C2;
+  font-weight: 600;
+  border: none;
+  border-radius: 20px;
+  padding: 0.4rem 1rem;
+  font-size: 14px;
+  cursor: pointer;
+  outline: 2px solid #0A66C2;
+;
+}
